# animation_studio

./: .gitignore  AGENTS.md  CHANGELOG.md  ChatGPT-2D AI Sprite Tools.md  README.md  design-qa.md  index.html  package-lock.json  package.json  vite.config.mjs  vitest.config.ts
.github/workflows/: windows-installer.yml
scripts/: prepare-updater-release.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppShell.tsx  HierarchyPanel.tsx  InspectorPanel.tsx  StatusBar.tsx  StudioCanvas.tsx  Timeline.tsx  ToolRail.tsx  TopBar.tsx  UpdateCenter.test.tsx  UpdateCenter.tsx
src/studio/: data.ts  hitTest.ts  native.ts  pose.test.ts  pose.ts  project.test.ts  project.ts  reducer.test.ts  reducer.ts  types.ts
src/updater/: native.ts  preferences.test.ts  preferences.ts  useAppUpdater.ts
tests/: updater-release.test.mjs
